--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "nodemailer": "^6.9.7",
     "uuid": "^9.0.1"
   },
   "type": "module"
