--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "nodemailer": "^6.9.7",
     "uuid": "^9.0.1"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/express": "^4.17.21"
+  }
 }
